# stt-clipboard

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  config.py  examples.json  pyproject.toml  start.sh  stt.py  style.css  vad.py
pytests/: test_transcribe.py
src/: Transcriber.py  utils.py  vad.py
src/cohere/: model.py
src/qwen_asr/: model.py
src/qwen_asr/core/transformers_backend/: configuration_qwen3_asr.py  modeling_qwen3_asr.py
src/qwen_asr/inference/: qwen3_asr.py  qwen3_forced_aligner.py  utils.py
src/vrchatosc/: __init__.py  client.py
src/whisper/: model.py
