[project]
name = "stt-clipboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ruff",
  "gradio",
  "faster-whisper",
  "silero-vad",
  "torch",
  "torchaudio",
  "torchvision",
  "opencc",
  "pyperclip",
  "torchcodec",
  "librosa0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
