[project]
name = "stt-clipboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ruff",
  "gradio",
  "silero-vad",
  "torch",
  "torchaudio",
  "torchvision",
  "opencc",
  "pyperclip",
  "torchcodec",
  "librosa",
  "transformers>=5.5.0",
  "pytest>=9.0.2",
  "accelerate>=1.13.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra -q"]
testpaths = ["pytests"]
