[project]
name = "stt-clipboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ruff",
  "gradio",
  "silero-vad",
  "torch",
  "torchaudio",
  "torchvision",
  "opencc",
  "pyperclip",
  "torchcodec",
  "librosa",
  "transformers>=5.5.0",
  "pytest>=9.0.2",
  "accelerate>=1.13.0",
  "flash-attn-4",
  "nagisa>=0.2.12",
  "onnxruntime>=1.24.4",
  "python-osc>=1.10.2",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]
flash-attn-4 = { path = "downloads/wheels/flash_attn_4-4.0.0b5-py3-none-any.whl" }

[tool.pytest]
minversion = "9.0"
addopts = ["-s"]
testpaths = ["pytests"]
pythonpath = ["."]
